tracing-filter/tests/snapshots/lib__snapshots__report@parse_spec_blank_level_isolated_blank_comma.env_filter.snap
---
source: tracing-filter/tests/snapshots.rs
assertion_line: 76
expression: "     ,"
---
(no warnings)
