tracing-filter/tests/snapshots/lib__snapshots__report@target.env_filter.snap
---
source: tracing-filter/tests/snapshots.rs
assertion_line: 74
expression: "example::log::target=level"
---

  ⚠ 1 directives were ignored as invalid

Error: tracing_filter::simple::Warning::InvalidLevel

  ⚠ invalid level filter specified
   ╭────
 1 │ example::log::target=level
   ·                      ──┬──
   ·                        ╰── this level filter is invalid
   ╰────
  help: valid level filters are OFF, ERROR, WARN, INFO, DEBUG, or TRACE

